vm options for jdk17